<resources>
    <!--    -->
    <string name="app_name">Sistema de Gestión de Incidentes</string>


    <!--  Login  -->
    <string name="title_login">Inicia sesión</string>
    <string name="subtitle_login">Debes autenticarte para continuar.</string>
    <string name="txt_email_hint">Correo Electrónico</string>
    <string name="txt_password_hint">Contraseña</string>
    <string name="btn_text">Entrar</string>
    <string name="btn_nota">Agregar Nota</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_add_user">Guardar</string>
    <string name="rb_admin">Administrador</string>
    <string name="rb_employee">Empleado</string>


    <string-array name="roles">
        <item>Empleado</item>
        <item>Administrador</item>
    </string-array>
</resources>