<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/slate_900"
    android:orientation="vertical"
    tools:context=".AddUser">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registro de usuario"
        android:textColor="@color/slate_200"
        android:fontFamily="@font/roboto_bold"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/txtAddUser_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="name"
        android:background="@drawable/input_rounded"
        android:elevation="4dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="Nombre"
        android:inputType="textPersonName"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/slate_300"
        android:textColorHint="@color/slate_400"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/txtAddUser_Lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="name"
        android:background="@drawable/input_rounded"
        android:elevation="4dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="Apellido"
        android:inputType="textPersonName"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/slate_300"
        android:textColorHint="@color/slate_400"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/txtAddUser_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/input_rounded"
        android:elevation="4dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/txt_email_hint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/slate_300"
        android:textColorHint="@color/slate_400"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/txtAddUser_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="password"
        android:background="@drawable/input_rounded"
        android:elevation="4dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/txt_password_hint"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/slate_300"
        android:textColorHint="@color/slate_400"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/txtAddUser_ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="password"
        android:background="@drawable/input_rounded"
        android:elevation="4dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="Confirmar contraseña"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/slate_300"
        android:textColorHint="@color/slate_400"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spnRol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:elevation="4dp"
        android:background="@drawable/spinner_bg"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_user"
        android:backgroundTint="@color/sky_600"
        android:elevation="4dp"
        android:paddingVertical="10dp"
        android:textColor="@color/slate_200"
        />
</LinearLayout>